[CM] Added MaterialLib to root CMakeLists.txt.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -192,6 +192,7 @@ add_subdirectory( MeshLib )
 add_subdirectory( MeshGeoToolsLib )
 add_subdirectory( NumLib )
 add_subdirectory( ProcessLib )
+add_subdirectory( MaterialLib )
 if( OGS_BUILD_TESTS AND NOT IS_SUBPROJECT )
     add_subdirectory( Tests )
 
