[Mat] Added Storage and viscosity models.

--- a/ProcessLib/CMakeLists.txt
+++ b/ProcessLib/CMakeLists.txt
@@ -15,6 +15,7 @@ add_library(ProcessLib ${SOURCES})
 
 target_link_libraries(ProcessLib
     MaterialsLib
+    MaterialLib
     MeshGeoToolsLib
     NumLib # for shape matrices
     ${VTK_LIBRARIES}
