[Mat] Added classes for fluid viscosity models

--- a/MaterialLib/CMakeLists.txt
+++ b/MaterialLib/CMakeLists.txt
@@ -5,6 +5,7 @@ append_source_files(SOURCES SolidModels)
 
 append_source_files(SOURCES Fluid)
 append_source_files(SOURCES Fluid/Density)
+append_source_files(SOURCES Fluid/Viscosity)
 
 add_library(MaterialLib ${SOURCES} )
 target_link_libraries(MaterialLib
