--- a/Tests/CMakeLists.txt
+++ b/Tests/CMakeLists.txt
@@ -18,6 +18,7 @@ APPEND_SOURCE_FILES(TEST_SOURCES MeshLib)
 APPEND_SOURCE_FILES(TEST_SOURCES MeshGeoToolsLib)
 APPEND_SOURCE_FILES(TEST_SOURCES NumLib)
 APPEND_SOURCE_FILES(TEST_SOURCES MaterialLib)
+APPEND_SOURCE_FILES(TEST_SOURCES ProcessLib/LiquidFlow)
 
 if(QT4_FOUND)
     APPEND_SOURCE_FILES(TEST_SOURCES FileIO_Qt)
