--- a/MaterialLib/CMakeLists.txt
+++ b/MaterialLib/CMakeLists.txt
@@ -7,6 +7,8 @@ append_source_files(SOURCES FractureModels)
 append_source_files(SOURCES Fluid)
 append_source_files(SOURCES Fluid/Density)
 append_source_files(SOURCES Fluid/Viscosity)
+append_source_files(SOURCES Fluid/SpecificHeatCapacity)
+append_source_files(SOURCES Fluid/ThermalConductivity)
 
 append_source_files(SOURCES PorousMedium/Porosity)
 append_source_files(SOURCES PorousMedium/Storage)
